Fix pre code word-wrap for webkit
`word-wrap` was set to `break-word`, which led to webkit breaking lines
in code snippet. Stop that.

Also, only apply top and bottom padding to code fields to avoid "odd
looking indentation".

--- a/assets/scss/about-blank.scss
+++ b/assets/scss/about-blank.scss
@@ -28,5 +28,10 @@ $container-max-widths: (
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 pre {
-  padding: 5px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+
+  code {
+    word-wrap: normal;
+  }
 }
